File: components/nexus-repository-content/src/main/java/org/sonatype/nexus/repository/content/store/internal/migration/package-info.java